--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@ let rotationTimer = null;
 
 const seekbar = document.getElementById("seekbar");
 const cd = document.getElementById("cd");
+const currentEl = document.getElementById("current");
 
 /* 回線判定 */
 function isLikelyWifi() {
@@ -150,45 +151,53 @@ function onYouTubeIframeAPIReady() {
 }
 
 function onReady() {
-  ytPlayer.mute();                 // ★ 常にミュートで初期化
+  ytPlayer.mute();
   ytPlayer.setPlaybackQuality('small');
   duration = ytPlayer.getDuration();
   document.getElementById("duration").textContent = format(duration);
   updateLoop();
 }
 
+/* ▶ 再生 */
 function play() {
-  ytPlayer.mute();                 // ★ 再生前に必ずミュート
+  ytPlayer.mute();
   ytPlayer.playVideo();
 }
 
+/* ⏸ 停止 */
 function pause() {
   ytPlayer.pauseVideo();
+  cd.style.animationPlayState = "paused"; // ★ 回転停止
 }
 
+/* 再生状態変化 */
 function onStateChange(e) {
-  if (e.data === YT.PlayerState.PLAYING && !readyForPlayback) {
-    ytPlayer.mute();               // ★ PLAYINGになってもまだ無音
 
-    // 再生が安定（1秒）したら回転フェーズへ
-    stableTimer = setTimeout(startRotationPhase, 1000);
+  if (e.data === YT.PlayerState.PLAYING) {
+
+    // 回転再開
+    cd.style.animationPlayState = "running";
+
+    if (!readyForPlayback) {
+      ytPlayer.mute();
+
+      stableTimer = setTimeout(startRotationPhase, 1000);
+    }
   }
 
-  if (e.data !== YT.PlayerState.PLAYING) {
+  // 一時停止・停止時
+  if (
+    e.data === YT.PlayerState.PAUSED ||
+    e.data === YT.PlayerState.ENDED
+  ) {
+    cd.style.animationPlayState = "paused";
     clearTimeout(stableTimer);
     clearTimeout(rotationTimer);
-    stableTimer = null;
-    rotationTimer = null;
   }
 }
 
-/* 回転開始（※まだ音は出さない） */
+/* 回転開始フェーズ（まだ無音） */
 function startRotationPhase() {
-  if (readyForPlayback) return;
-
-  cd.style.animationPlayState = "running";
-
-  // 回転が0.3秒以上続いたら音解禁
   rotationTimer = setTimeout(() => {
     if (cd.style.animationPlayState === "running") {
       startAudioPlayback();
@@ -196,19 +205,17 @@ function startRotationPhase() {
   }, 300);
 }
 
-/* 本当の本編開始 */
+/* 本編開始 */
 function startAudioPlayback() {
   if (readyForPlayback) return;
   readyForPlayback = true;
 
   seekbar.disabled = false;
 
-  // ★ ここで初めてアンミュート
   ytPlayer.unMute();
-
-  // フェードイン
-  let vol = 0;
   ytPlayer.setVolume(0);
+
+  let vol = 0;
   const fade = setInterval(() => {
     vol += 5;
     ytPlayer.setVolume(vol);
@@ -220,20 +227,26 @@ function startAudioPlayback() {
   );
 }
 
-/* シーク制御 */
+/* シーク操作 */
 seekbar.addEventListener("input", () => {
   if (!readyForPlayback) return;
+
   seeking = true;
+
+  // ★ シーク中も時間表示を更新
+  const preview = (seekbar.value / 100) * duration;
+  currentEl.textContent = format(preview);
 });
 
 seekbar.addEventListener("change", () => {
   if (!readyForPlayback) return;
+
   const target = (seekbar.value / 100) * duration;
   ytPlayer.seekTo(target, true);
   seeking = false;
 });
 
-/* 時間更新 */
+/* 時間更新ループ */
 function updateLoop() {
   if (
     ytPlayer &&
@@ -243,11 +256,12 @@ function updateLoop() {
   ) {
     const current = ytPlayer.getCurrentTime();
     seekbar.value = (current / duration) * 100;
-    document.getElementById("current").textContent = format(current);
+    currentEl.textContent = format(current);
   }
   requestAnimationFrame(updateLoop);
 }
 
+/* 時間整形 */
 function format(sec) {
   const m = Math.floor(sec / 60);
   const s = Math.floor(sec % 60).toString().padStart(2, "0");
@@ -257,6 +271,7 @@ function format(sec) {
 
 </body>
 </html>
+
 
 
 
