--- a/index.html
+++ b/index.html
@@ -116,11 +116,17 @@ button {
 <script>
 let ytPlayer;
 let duration = 0;
+
 let seeking = false;
 let readyForPlayback = false;
 let isPlaying = false;
+
 let stableTimer = null;
 let rotationTimer = null;
+let confirmTimer = null;
+
+let lastTime = 0;
+let progressCount = 0;
 
 const seekbar = document.getElementById("seekbar");
 const cd = document.getElementById("cd");
@@ -159,7 +165,7 @@ function onReady() {
   updateLoop();
 }
 
-/* ▶ / ⏸ トグル */
+/* ▶ / ⏸ */
 function togglePlay() {
   if (!ytPlayer) return;
 
@@ -168,29 +174,32 @@ function togglePlay() {
     cd.style.animationPlayState = "paused";
     playBtn.textContent = "▶";
     isPlaying = false;
-  } else {
-    ytPlayer.playVideo();
-    cd.style.animationPlayState = "running";
-    playBtn.textContent = "⏸";
-    isPlaying = true;
+    return;
+  }
 
-    // ★ 初回再生でなければ即音を戻す
-    if (readyForPlayback) {
-      ytPlayer.unMute();
-      ytPlayer.setVolume(100);
-    } else {
-      ytPlayer.mute();
-    }
+  ytPlayer.playVideo();
+  playBtn.textContent = "⏸";
+  isPlaying = true;
+
+  // 2回目以降は即回転＋音
+  if (readyForPlayback) {
+    cd.style.animationPlayState = "running";
+    ytPlayer.unMute();
+    ytPlayer.setVolume(100);
+  } else {
+    ytPlayer.mute();
   }
 }
 
-/* 再生状態変化 */
+/* 状態変化 */
 function onStateChange(e) {
 
   if (e.data === YT.PlayerState.PLAYING && !readyForPlayback) {
-    ytPlayer.mute();
+    lastTime = ytPlayer.getCurrentTime();
+    progressCount = 0;
 
-    stableTimer = setTimeout(startRotationPhase, 1000);
+    // 再生位置の進行を監視
+    confirmTimer = setInterval(confirmMainPlayback, 200);
   }
 
   if (
@@ -200,13 +209,33 @@ function onStateChange(e) {
     cd.style.animationPlayState = "paused";
     playBtn.textContent = "▶";
     isPlaying = false;
-    clearTimeout(stableTimer);
-    clearTimeout(rotationTimer);
+    clearAllTimers();
   }
 }
 
-/* 回転フェーズ（まだ無音） */
+/* 本編判定 */
+function confirmMainPlayback() {
+  const now = ytPlayer.getCurrentTime();
+
+  if (now > lastTime + 0.1) {
+    progressCount++;
+  } else {
+    progressCount = 0;
+  }
+
+  lastTime = now;
+
+  // 3回連続で進行したら本編濃厚
+  if (progressCount >= 3) {
+    clearInterval(confirmTimer);
+    startRotationPhase();
+  }
+}
+
+/* 回転開始（まだ無音） */
 function startRotationPhase() {
+  cd.style.animationPlayState = "running";
+
   rotationTimer = setTimeout(() => {
     if (cd.style.animationPlayState === "running") {
       startAudioPlayback();
@@ -214,11 +243,11 @@ function startRotationPhase() {
   }, 300);
 }
 
-/* 本編開始 */
+/* 音解禁 */
 function startAudioPlayback() {
   if (readyForPlayback) return;
-  readyForPlayback = true;
 
+  readyForPlayback = true;
   seekbar.disabled = false;
 
   ytPlayer.unMute();
@@ -236,7 +265,7 @@ function startAudioPlayback() {
   );
 }
 
-/* シーク操作 */
+/* シーク */
 seekbar.addEventListener("input", () => {
   if (!readyForPlayback) return;
   seeking = true;
@@ -246,24 +275,24 @@ seekbar.addEventListener("input", () => {
 
 seekbar.addEventListener("change", () => {
   if (!readyForPlayback) return;
-  const target = (seekbar.value / 100) * duration;
-  ytPlayer.seekTo(target, true);
+  ytPlayer.seekTo((seekbar.value / 100) * duration, true);
   seeking = false;
 });
 
-/* 時間更新 */
+/* 更新 */
 function updateLoop() {
-  if (
-    ytPlayer &&
-    ytPlayer.getCurrentTime &&
-    readyForPlayback &&
-    !seeking
-  ) {
+  if (ytPlayer && ytPlayer.getCurrentTime && readyForPlayback && !seeking) {
     const current = ytPlayer.getCurrentTime();
     seekbar.value = (current / duration) * 100;
     currentEl.textContent = format(current);
   }
   requestAnimationFrame(updateLoop);
+}
+
+function clearAllTimers() {
+  clearInterval(confirmTimer);
+  clearTimeout(rotationTimer);
+  clearTimeout(stableTimer);
 }
 
 function format(sec) {
@@ -275,6 +304,7 @@ function format(sec) {
 
 </body>
 </html>
+
 
 
 
