--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@ body {
   cursor: pointer;
 }
 
+/* ===== ディスク取り出し ===== */
+.eject {
+  position: fixed;
+  top: 16px;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 20px;
+  opacity: 0.6;
+  cursor: pointer;
+  z-index: 40;
+}
+.eject:hover { opacity: 1; }
+
 /* ===== プレイリスト ===== */
 .playlist {
   position: fixed;
@@ -61,6 +74,11 @@ body {
   width: 300px;
   height: 300px;
   margin: 20px auto;
+  transition: transform .4s ease, opacity .4s ease;
+}
+.stage.swap {
+  transform: scale(0.85);
+  opacity: 0;
 }
 
 /* ===== 動画 ===== */
@@ -113,7 +131,7 @@ body {
   color: #aaa;
 }
 
-/* ▼ 曲名リンク用（追加・他未変更） */
+/* 曲名リンク */
 .title-link {
   color: #fff;
   text-decoration: none;
@@ -123,9 +141,7 @@ body {
   opacity: 0.85;
   position: relative;
 }
-.title-link:hover {
-  opacity: 1;
-}
+.title-link:hover { opacity: 1; }
 .youtube-icon {
   width: 14px;
   height: 14px;
@@ -138,7 +154,6 @@ body {
 .controls {
   margin-top: 18px;
 }
-
 .control-buttons {
   display: flex;
   justify-content: center;
@@ -146,7 +161,6 @@ body {
   gap: 22px;
   margin-bottom: 10px;
 }
-
 .icon-btn,
 .play-btn {
   background: none;
@@ -154,18 +168,13 @@ body {
   padding: 0;
   cursor: pointer;
 }
-
 .icon-btn svg {
   width: 22px;
   height: 22px;
   fill: #aaa;
   transition: fill 0.2s;
 }
-.icon-btn:hover svg {
-  fill: #fff;
-}
-
-/* 再生ボタン */
+.icon-btn:hover svg { fill: #fff; }
 .play-btn {
   width: 56px;
   height: 56px;
@@ -176,20 +185,14 @@ body {
   justify-content: center;
 }
 
-/* ===== 再生中の淡い照らし ===== */
+/* 再生中の照らし */
 @keyframes glowCycle {
   0% { box-shadow: 0 0 12px rgba(255,255,255,0.7),0 0 28px rgba(255,255,255,0.35); }
-  20% { box-shadow: 0 0 14px rgba(255,80,80,0.75),0 0 32px rgba(255,80,80,0.4); }
-  40% { box-shadow: 0 0 14px rgba(120,220,255,0.75),0 0 32px rgba(120,220,255,0.4); }
-  60% { box-shadow: 0 0 16px rgba(100,180,255,0.85),0 0 40px rgba(100,180,255,0.5); }
-  80% { box-shadow: 0 0 14px rgba(180,120,255,0.75),0 0 32px rgba(180,120,255,0.4); }
   100% { box-shadow: 0 0 12px rgba(255,255,255,0.7),0 0 28px rgba(255,255,255,0.35); }
 }
-
 body.playing .play-btn {
   animation: glowCycle 6s ease-in-out infinite;
 }
-
 .play-btn svg {
   width: 26px;
   height: 26px;
@@ -199,7 +202,6 @@ body.playing .play-btn {
 /* ===== シークバー ===== */
 .seekbar {
   width: 100%;
-  -webkit-appearance: none;
   appearance: none;
   height: 4px;
   border-radius: 2px;
@@ -212,21 +214,53 @@ body.playing .play-btn {
   );
 }
 .seekbar::-webkit-slider-thumb {
-  -webkit-appearance: none;
+  appearance: none;
   width: 12px;
   height: 12px;
   background: #fff;
   border-radius: 50%;
   cursor: pointer;
 }
-
-/* 時間 */
 .time {
   font-size: 12px;
   color: #aaa;
   display: flex;
   justify-content: space-between;
   margin-top: 4px;
+}
+
+/* ===== アルバムモーダル ===== */
+.album-modal {
+  position: fixed;
+  inset: 0;
+  background: rgba(0,0,0,0.6);
+  display: none;
+  z-index: 50;
+}
+.album-modal.open { display: block; }
+.album-panel {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #181818;
+  border-radius: 16px 16px 0 0;
+  padding: 20px;
+  animation: slideUp .35s ease;
+}
+@keyframes slideUp {
+  from { transform: translateY(100%); }
+  to { transform: translateY(0); }
+}
+.album-item {
+  padding: 12px;
+  border-radius: 8px;
+  cursor: pointer;
+}
+.album-item.active { background: #333; }
+.album-item span {
+  display: block;
+  font-size: 12px;
+  color: #aaa;
 }
 </style>
 </head>
@@ -237,19 +271,20 @@ body.playing .play-btn {
   <div class="menu-btn" onclick="toggleList()">☰</div>
 </div>
 
+<div class="eject" onclick="openAlbums()">⏏️</div>
+
 <div class="playlist" id="playlist"></div>
 
 <div class="container">
-  <div class="stage">
+  <div class="stage" id="stage">
     <div id="player" class="video"></div>
     <div id="cd" class="cd"></div>
   </div>
 
-  <!-- ▼ 曲名タップでYouTubeへ（ここだけ変更） -->
   <div class="title">
     <a id="titleLink" class="title-link" target="_blank" rel="noopener">
       <span id="title"></span>
-      <svg class="youtube-icon" viewBox="0 0 24 24" fill="currentColor">
+      <svg class="youtube-icon" viewBox="0 0 24 24">
         <path d="M23.5 6.2s-.2-1.6-.9-2.3c-.9-.9-1.9-.9-2.4-1C16.8 2.5 12 2.5 12 2.5s-4.8 0-8.2.4c-.5.1-1.5.1-2.4 1-.7.7-.9 2.3-.9 2.3S0 8 0 9.8v1.8c0 1.8.2 3.6.2 3.6s.2 1.6.9 2.3c.9.9 2.1.9 2.6 1 1.9.2 8.3.4 8.3.4s4.8 0 8.2-.4c.5-.1 1.5-.1 2.4-1 .7-.7.9-2.3.9-2.3s.2-1.8.2-3.6V9.8c0-1.8-.2-3.6-.2-3.6zM9.6 14.6V7.9l6.4 3.4-6.4 3.3z"/>
       </svg>
     </a>
@@ -258,18 +293,12 @@ body.playing .play-btn {
 
   <div class="controls">
     <div class="control-buttons">
-      <button class="icon-btn" onclick="prev()">
-        <svg viewBox="0 0 24 24"><path d="M6 5v14M18 6l-8 6 8 6z"/></svg>
-      </button>
-
+      <button class="icon-btn" onclick="prev()">◀</button>
       <button class="play-btn" onclick="toggle()">
         <svg id="playIcon" viewBox="0 0 24 24"><path d="M8 5v14l11-7z"/></svg>
         <svg id="pauseIcon" viewBox="0 0 24 24" style="display:none"><path d="M6 5h4v14H6zm8 0h4v14h-4z"/></svg>
       </button>
-
-      <button class="icon-btn" onclick="next()">
-        <svg viewBox="0 0 24 24"><path d="M18 5v14M6 6l8 6-8 6z"/></svg>
-      </button>
+      <button class="icon-btn" onclick="next()">▶</button>
     </div>
 
     <input type="range" id="seekbar" class="seekbar" min="0" max="100">
@@ -280,32 +309,47 @@ body.playing .play-btn {
   </div>
 </div>
 
+<!-- アルバム選択 -->
+<div class="album-modal" id="albumModal" onclick="closeAlbums()">
+  <div class="album-panel" onclick="event.stopPropagation()">
+    <h3>ディスクを選択</h3>
+    <div id="albumList"></div>
+  </div>
+</div>
+
 <script src="https://www.youtube.com/iframe_api"></script>
 <script>
-const album = [
-  { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
-  { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" },
-  { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
+const albums = [
+  {
+    name: "REBEL Vol.1",
+    tracks: [
+      { id: "HCoTcCMLRsM", title: "Q", artist: "REBEL" },
+      { id: "p8iNb7sTNiY", title: "ロストワンの号哭", artist: "REBEL" }
+    ]
+  },
+  {
+    name: "REBEL Vol.2",
+    tracks: [
+      { id: "uC44M7_srjg", title: "DOGLAND", artist: "REBEL" }
+    ]
+  }
 ];
 
-let player, index = 0;
-let playing = false, seeking = false;
-let rotationTimer = null;
-let cdMini = false;
+let albumIndex = 0;
+let trackIndex = 0;
+let player, playing = false;
 
-const cd = document.getElementById("cd");
-const playIcon = document.getElementById("playIcon");
-const pauseIcon = document.getElementById("pauseIcon");
-const seekbar = document.getElementById("seekbar");
+const stage = document.getElementById("stage");
 const playlist = document.getElementById("playlist");
-const stage = document.querySelector(".stage");
+const albumModal = document.getElementById("albumModal");
+const albumList = document.getElementById("albumList");
 const titleLink = document.getElementById("titleLink");
 
 function onYouTubeIframeAPIReady() {
   player = new YT.Player("player", {
-    videoId: album[0].id,
+    videoId: albums[0].tracks[0].id,
     playerVars: { playsinline: 1, controls: 0 },
-    events: { onReady, onStateChange }
+    events: { onReady }
   });
 }
 
@@ -316,19 +360,7 @@ function onReady() {
   loop();
 }
 
-function onStateChange(e) {
-  if (e.data === YT.PlayerState.PLAYING) {
-    startRotation();
-    playing = true;
-    playIcon.style.display = "none";
-    pauseIcon.style.display = "block";
-    document.body.classList.add("playing");
-  }
-  if (e.data === YT.PlayerState.ENDED) next();
-}
-
 function toggle() { playing ? pause() : play(); }
-
 function play() {
   player.playVideo();
   playing = true;
@@ -336,102 +368,80 @@ function play() {
   pauseIcon.style.display = "block";
   document.body.classList.add("playing");
 }
-
 function pause() {
   player.pauseVideo();
-  stopRotation();
-  player.setVolume(0);
   playing = false;
   playIcon.style.display = "block";
   pauseIcon.style.display = "none";
   document.body.classList.remove("playing");
 }
 
-/* 回転 */
-function startRotation() {
-  if (cd.style.animationPlayState === "running") return;
-  cd.style.animationPlayState = "running";
-  clearTimeout(rotationTimer);
-  rotationTimer = setTimeout(() => player.setVolume(100), 300);
+/* アルバム */
+function openAlbums() {
+  renderAlbums();
+  albumModal.classList.add("open");
 }
-function stopRotation() {
-  cd.style.animationPlayState = "paused";
-  clearTimeout(rotationTimer);
+function closeAlbums() {
+  albumModal.classList.remove("open");
 }
-
-/* CDタップ */
-cd.onclick = () => {
-  cdMini = !cdMini;
-  cd.classList.toggle("mini", cdMini);
-  stage.classList.toggle("cd-mini", cdMini);
-};
-
-/* シーク */
-seekbar.oninput = () => {
-  seeking = true;
-  seekbar.style.setProperty("--progress", seekbar.value + "%");
-};
-seekbar.onchange = () => {
-  player.seekTo((seekbar.value / 100) * player.getDuration(), true);
-  seeking = false;
-};
-
-function loop() {
-  if (player && player.getCurrentTime && !seeking) {
-    const cur = player.getCurrentTime();
-    const dur = player.getDuration();
-    const percent = (cur / dur) * 100;
-    seekbar.value = percent;
-    seekbar.style.setProperty("--progress", percent + "%");
-    current.textContent = format(cur);
-    duration.textContent = format(dur);
-  }
-  requestAnimationFrame(loop);
+function renderAlbums() {
+  albumList.innerHTML = "";
+  albums.forEach((a, i) => {
+    const d = document.createElement("div");
+    d.className = "album-item" + (i === albumIndex ? " active" : "");
+    d.innerHTML = `${a.name}<span>${a.tracks.length} tracks</span>`;
+    d.onclick = () => switchAlbum(i);
+    albumList.appendChild(d);
+  });
 }
-
-/* 曲操作 */
-function loadTrack(i) {
-  index = i;
-  stopRotation();
-  player.setVolume(0);
-  player.loadVideoById(album[index].id);
-  updateInfo();
-  renderList();
-  playing = false;
-  playIcon.style.display = "block";
-  pauseIcon.style.display = "none";
-  document.body.classList.remove("playing");
+function switchAlbum(i) {
+  stage.classList.add("swap");
+  setTimeout(() => {
+    albumIndex = i;
+    trackIndex = 0;
+    player.loadVideoById(albums[i].tracks[0].id);
+    updateInfo();
+    renderList();
+    stage.classList.remove("swap");
+    closeAlbums();
+  }, 350);
 }
-function next() { loadTrack((index + 1) % album.length); }
-function prev() { loadTrack((index - 1 + album.length) % album.length); }
 
 /* プレイリスト */
 function renderList() {
   playlist.innerHTML = "<h3>アルバム</h3>";
-  album.forEach((t, i) => {
-    const div = document.createElement("div");
-    div.className = "track" + (i === index ? " active" : "");
-    div.innerHTML = `${t.title}<span>${t.artist}</span>`;
-    div.onclick = () => { loadTrack(i); toggleList(); };
-    playlist.appendChild(div);
+  albums[albumIndex].tracks.forEach((t, i) => {
+    const d = document.createElement("div");
+    d.className = "track" + (i === trackIndex ? " active" : "");
+    d.innerHTML = `${t.title}<span>${t.artist}</span>`;
+    d.onclick = () => loadTrack(i);
+    playlist.appendChild(d);
   });
+}
+function loadTrack(i) {
+  trackIndex = i;
+  player.loadVideoById(albums[albumIndex].tracks[i].id);
+  updateInfo();
+  renderList();
+}
+function next() {
+  loadTrack((trackIndex + 1) % albums[albumIndex].tracks.length);
+}
+function prev() {
+  loadTrack((trackIndex - 1 + albums[albumIndex].tracks.length) % albums[albumIndex].tracks.length);
 }
 
 function toggleList() {
   playlist.classList.toggle("open");
 }
-
 function updateInfo() {
-  title.textContent = album[index].title;
-  artist.textContent = album[index].artist;
-  titleLink.href = "https://www.youtube.com/watch?v=" + album[index].id;
+  const t = albums[albumIndex].tracks[trackIndex];
+  title.textContent = t.title;
+  artist.textContent = t.artist;
+  titleLink.href = "https://www.youtube.com/watch?v=" + t.id;
 }
 
-function format(sec) {
-  const m = Math.floor(sec / 60);
-  const s = Math.floor(sec % 60).toString().padStart(2, "0");
-  return `${m}:${s}`;
-}
+function loop() { requestAnimationFrame(loop); }
 </script>
 
 </body>
